package com.javamid.ui.overlay;

public enum OverlayMode {
    NONE,
    HUMIDITY,
    TEMPERATURE
}
